--- a/aula2/aula2_05.html
+++ b/aula2/aula2_05.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html><head>
+<html>
+<head>
   <meta charset="utf-8">
   <title>Aula2_5</title>
-</head><body>
+</head>
+<body>
   <h1>Aula2_5</h1>
   <p id="teste"></p>
   <p id="teste1"></p>
-  <script>
-    document.getElementById("teste").innerHTML="Funciona?";
-    document.querySelector("#teste1").innerHTML="Será que funciona?";
-  </script>
-</body></html>
+  <script src="script2_05.js"></script>
+  </body>
+</html>
