--- a/aula3/aula3.html
+++ b/aula3/aula3.html
@@ -6,6 +6,6 @@
  </head>
  <body>
    <h1>Aula3</h1>
-   <script src="script3_01.js"></script> 
+   <script src="script3_01-1.js"></script> 
  </body>
 </html>
