--- a/aula4/aula4.html
+++ b/aula4/aula4.html
@@ -5,6 +5,6 @@
  <title>Aula4</title>
 </head>
 <body>
-<script src="script4_13-2.js"></script>
+<script src="script4_desafio.js"></script>
 </body>
 </html>
