--- a/aula5/index.html
+++ b/aula5/index.html
@@ -3,7 +3,9 @@
 <head>
  <meta charset="utf-8">
  <title>Aula5</title>
- <script src="script5_01.js" defer></script>
+ <script src="script5_01-1.js" defer></script>
+ <!--  defer, serve para carregar primeiro a página HTML antes do script JS-->
+ <!-- [ctrl][;] ou [ctrl][/]  Insere um comentário -->
 </head>
 <body>
     <h1>Aula5</h1>
