--- a/aula5/index.html
+++ b/aula5/index.html
@@ -3,13 +3,13 @@
 <head>
  <meta charset="utf-8">
  <title>Aula5</title>
- <script src="script5_par_impar.js" defer></script>
+ <script src="script5_desafio.js" defer></script>
  <!--  defer, serve para carregar primeiro a página HTML antes do script JS-->
  <!-- [ctrl][;] ou [ctrl][/]  Insere um comentário -->
 </head>
 <body>
     <h1>Aula5</h1>
-    <div class="saida"></div>
     <h2 id="teste">Teste de H2</h2>
+    <div class="saida"></div>
 </body>
 </html>
