--- a/aula5/index.html
+++ b/aula5/index.html
@@ -3,7 +3,7 @@
 <head>
  <meta charset="utf-8">
  <title>Aula5</title>
- <script src="script5_11-2.js" defer></script>
+ <script src="script5_11-3.js" defer></script>
  <!--  defer, serve para carregar primeiro a página HTML antes do script JS-->
  <!-- [ctrl][;] ou [ctrl][/]  Insere um comentário -->
 </head>
@@ -11,5 +11,7 @@
     <h1>Aula5</h1>
     <h2 id="teste">Teste de H2</h2>
     <div class="saida"></div>
+    UF <select name="uf" id="uf">
+    </select>
 </body>
 </html>
