--- a/aula5/index.html
+++ b/aula5/index.html
@@ -4,6 +4,7 @@
  <meta charset="utf-8">
  <title>Aula5</title>
  <script src="script5_11-3.js" defer></script>
+ <!-- link:css atalho para link css -->
  <!--  defer, serve para carregar primeiro a página HTML antes do script JS-->
  <!-- [ctrl][;] ou [ctrl][/]  Insere um comentário -->
 </head>
