--- a/aula6/index.html
+++ b/aula6/index.html
@@ -3,7 +3,7 @@
 <head>
  <meta charset="utf-8">
  <title>Aula6</title>
- <script src="script6_00.js" defer></script>
+ <script src="script6_00-1.js" defer></script>
 </head>
 <body>
     <h1>Aula6</h1>
