--- a/aula7/index.html
+++ b/aula7/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Aula 7</h1>
+    <button onclick="alert('oi')">Clique</button>
     <div class="saida"></div>
 </body>
 </html>
