--- a/aula7/index.html
+++ b/aula7/index.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula7</title>
-    <script src="aula7_01.js" defer></script>
+    <script src="aula7_02.js" defer></script>
 </head>
 <body>
     <h1>Aula 7</h1>
-    <button onclick="alert('oi')">Clique</button>
+    <label for="nome">Nome</label><input type="text" name="nome" id="nome"><br>
+    <label for="av1">AV1</label><input type="number" name="av1" id="av1"><br>
+    <label for="av2">AV2</label><input type="number" name="av2" id="av2"><br>
+    <button onclick="calc()">Calcular Media</button>
     <div class="saida"></div>
 </body>
 </html>
