--- a/aula7/index.html
+++ b/aula7/index.html
@@ -12,7 +12,9 @@
     <label for="nome">Nome</label><input type="text" name="nome" id="nome"><br>
     <label for="av1">AV1</label><input type="number" name="av1" id="av1"><br>
     <label for="av2">AV2</label><input type="number" name="av2" id="av2"><br>
-    <button onclick="calc()">Calcular Media</button>
+    <!-- <button onclick="calc()">Calcular Media</button> -->
+    <button class="btn1">Media 1</button>
+    <button class="btn2">Media 2</button>
     <div class="saida"></div>
 </body>
 </html>
